--- a/dev-server/app/static-assets/sass/_bases.sass
+++ b/dev-server/app/static-assets/sass/_bases.sass
@@ -30,6 +30,8 @@ html
   -webkit-font-smoothing: antialiased
   text-rendering: optimizeLegibility
   line-height: 1
+  width: 100%
+  height: 100%
 
 a
   background-color: transparent
