--- a/dev-server/app/static-assets/sass/_header-style.sass
+++ b/dev-server/app/static-assets/sass/_header-style.sass
@@ -66,18 +66,22 @@ nav
   display: none
 
 .floating-menu
+  position: absolute
+  left: 0
   top: -130px
+  z-index: 8
   transition: top 0.4s ease
 
 .mobile-find-field
   position: absolute
-  top: 62px
+  top: 0
   left: -102%
   display: none
   background: #f2f2f2
   width: 100%
   justify-content: center
   padding: 20px
+  z-index: 8
   transition: left 0.4s ease
   input
     color: #000
@@ -122,4 +126,4 @@ nav
   left: 0
 
 .show-menu
-  top: 62px
+  top: 0
