--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -16,33 +16,20 @@
 @import sign-in-button
 
 main
+  position: absolute
+  top: 60px
   width: 100%
-
-.main-section
-  display: flex
-  flex-wrap: wrap
-  align-items: flex-start
-
-#main-container
-  padding: 10px 0
-  flex: 6
+  height: calc(100% - 120px)
 
 .simple-text
   font-size: 28px
 
-.centered-text
-  max-width: 900px
-  margin: auto
-  font-size: 22px
-
-%centered-and-limited
+.google-map
   width: 100%
-  max-width: 900px
-  margin: auto
+  height: 100%
 
 #map
-  @extend %centered-and-limited
-  height: 400px
+  height: 100%
 
 .copyright
   display: block
