--- a/dev-server/app/static-assets/sass/_find-field.sass
+++ b/dev-server/app/static-assets/sass/_find-field.sass
@@ -8,7 +8,7 @@
     width: 200px
     padding: 0 10px
   &:hover > .find-btn 
-    background: #ccc
+    background: #ddd
 
 .find-btn 
   float: right
