--- a/dev-server/app/templates/partials/html/header.hbs
+++ b/dev-server/app/templates/partials/html/header.hbs
@@ -19,11 +19,11 @@
 			</div>
 			<div class="header-buttons">
 				<div class="favorites">
-					<a href="#">
+					<a href="#" onclick="showFavorites()">
 						<i class="far fa-bookmark"></i>
 					</a>
 				</div>
-				<div class="login">
+				<div class="login" onclick="showLoginMenu()">
 					<a href="#">
 						<i class="material-icons login-pic">exit_to_app</i>
 					</a>
