--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -1,2 +1,147 @@
+.google-map
+  width: 100%
+  height: 100%
 
-  
+#map
+  height: 100%
+
+.find-a-route-menu
+  position: absolute
+  top: 0
+  left: 0
+  z-index: 7
+  background: #eee
+  padding: 10px
+  margin: 10px
+  display: flex
+  flex-direction: column
+  align-items: center
+  border-radius: 10px
+  border: 1px solid $main-color
+  h2
+    font-family: $menus-font
+    font-size: 1.7em
+    margin: 10px
+
+.find-a-route-inputs
+    width: 100%
+    margin: 10px 0
+    padding: 5px 10px
+    border-radius: 20px
+    background: #ddd
+    color: #000
+    font-family: $main-font
+    font-size: 1.2em
+
+.time-interval
+    width: 100%
+    margin: 10px 0
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    &>input
+      border-radius: 20px
+      padding: 5px 10px
+      background: #ddd
+      color: #000
+      font-family: $main-font
+      font-size: 1em
+
+#find-a-route-button
+  font-size: 1.3em
+  border: 1px solid $main-color
+  background: lighten($main-color,35%)
+  border-radius: 20px
+  padding: 5px
+  margin-top: 5px
+  width: 60%
+  text-align: center
+  &:hover
+    background: lighten($main-color,20%)
+
+.favorites-menu
+  opacity: 0
+  transition: opacity 0.4s ease
+  position: absolute
+  top: 0
+  right: 0
+  z-index: 4
+  background: #eee
+  padding: 10px 25px
+  margin: 10px
+  display: flex
+  flex-direction: column
+  border-radius: 10px
+  border: 1px solid $main-color
+  h3
+    text-align: center
+    font-family: $menus-font
+    font-size: 1.5em
+    margin: 10px
+  ul
+    display: flex
+    flex-direction: column
+    align-items: flex-start
+    font-size: 1.3em
+  li
+    list-style-type: none
+    margin-top: 10px
+    text-align: left
+    width: 100%
+    background: darken(#eee,5%)
+    padding: 5px 10px
+    border-radius: 10px
+    &:hover
+      background: darken(#eee,10%)
+    .material-icons
+      margin-right: 5px
+
+.fa-map-marker
+  font-size: 30px
+  margin: 0 10px 0 5px
+
+.login-menu
+  opacity: 0
+  position: absolute
+  transition: opacity 0.4s ease
+  top: 0
+  right: 0
+  z-index: 4
+  background: #eee
+  padding: 10px
+  margin: 10px
+  display: flex
+  flex-direction: column
+  align-items: center
+  border-radius: 10px
+  border: 1px solid $main-color
+  h3
+    text-align: center
+    font-family: $menus-font
+    font-size: 1.5em
+    margin: 10px
+  input
+    width: 100%
+    margin: 10px 0
+    padding: 5px 10px
+    border-radius: 20px
+    background: #ddd
+    color: #000
+    font-family: $main-font
+    font-size: 1.2em
+
+#login-button
+  font-size: 1.3em
+  border: 1px solid $main-color
+  background: lighten($main-color,35%)
+  border-radius: 20px
+  padding: 5px
+  margin-top: 5px
+  width: 60%
+  text-align: center
+  &:hover
+    background: lighten($main-color,20%)
+
+.show-additional-menu
+  opacity: 1
+  z-index: 5
