--- a/dev-server/app/static-assets/sass/_index-style.sass
+++ b/dev-server/app/static-assets/sass/_index-style.sass
@@ -1,4 +1,5 @@
 .google-map
+  position: absolute
   width: 100%
   height: 100%
 
@@ -9,7 +10,7 @@
   position: absolute
   top: 0
   left: 0
-  z-index: 7
+  z-index: 3
   background: #eee
   padding: 10px
   margin: 10px
@@ -65,7 +66,7 @@
   position: absolute
   top: 0
   right: 0
-  z-index: 4
+  z-index: -1
   background: #eee
   padding: 10px 25px
   margin: 10px
@@ -106,7 +107,7 @@
   transition: opacity 0.4s ease
   top: 0
   right: 0
-  z-index: 4
+  z-index: -1
   background: #eee
   padding: 10px
   margin: 10px
