--- a/dev-server/app/templates/partials/html/footer.hbs
+++ b/dev-server/app/templates/partials/html/footer.hbs
@@ -1,3 +1,20 @@
+		<div class="favorites-menu">
+			<h3>Favorites</h3>
+			<ul>
+				<li><a href="#"><i class="material-icons">directions_bus</i>Bus 46</a></li>
+				<li><a href="#"><i class="material-icons">train</i>Train 102</a></li>
+				<li><a href="#"><i class="material-icons">tram</i>Tram 59</a></li>
+				<li><a href="#"><i class="fa fa-map-marker"></i>Maly V.O.</a></li>
+				<li><a href="#"><i class="fa fa-map-marker"></i>Nevsky pr.</a></li>
+			</ul>
+		</div>
+		<div class="login-menu">
+			<h3>Sign in</h3>
+			<input type="text" placeholder="Login">
+			<input type="password" placeholder="Password">
+			<a id="login-button" href="#">Sign in</a>
+		</div>
+	</main>
     <footer>
         <div class="copyright">© 2018 T-port</div>
     </footer>
