--- a/dev-server/app/templates/partials/html/header.hbs
+++ b/dev-server/app/templates/partials/html/header.hbs
@@ -42,3 +42,15 @@
 			</div>
 		</div>
     </header>
+    <main>
+		<div class="floating-menu">
+			<nav>
+				<a href="/nested/transport" class="nav-item">transport</a>
+				<a href="/nested/stops" class="nav-item">stops</a>
+				<a href="/nested/routes" class="nav-item">routes</a>
+			</nav>
+		</div>
+		<div class="mobile-find-field">
+			<input type="text" placeholder="Search…">
+			<i class="material-icons close-pic" onclick="mobileSearch()">close</i>
+		</div>
