--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -1,17 +1,11 @@
 @import variables
 @import header-style
+@import find-field
 @import index-style
 @import burger
 @import page-pieces
-
-  
-@import tables
-@import pagination
-@import login-form
 @import bases
 @import day-night-toggle
-@import find-field
-@import sign-in-button
 
 main
   position: absolute
@@ -21,6 +15,50 @@ main
 
 .simple-text
   font-size: 28px
+
+.substrate
+  width: 100%
+  height: 100%
+  background: $substrate-bg-color
+  z-index: 3
+  display: flex
+  flex-direction: column
+  h2
+    text-align: center
+    margin: 20px
+    font-family: $logo-font
+    font-size: 2.2em
+
+.filtering-menu
+  display: flex
+  flex-direction: row
+  margin: 10px
+  padding: 5px 20px
+  justify-content: center
+  select
+    padding: 5px 10px
+    border-radius: 50px
+    background: #eee
+    margin: 0 20px
+
+table
+  border-collapse: collapse
+  width: 100%
+  td, th  
+    border: 1px solid #ddd
+    padding: 8px
+  tr:nth-child(even)
+    background-color: #f2f2f2
+  tr
+    background-color: #f8f8f8
+  tr:hover
+    background-color: #ddd
+  th
+    padding-top: 12px
+    padding-bottom: 12px
+    text-align: left
+    background-color: $main-color
+    color: #fff
 
 .copyright
   display: block
