--- a/dev-server/app/static-assets/sass/_header-style.sass
+++ b/dev-server/app/static-assets/sass/_header-style.sass
@@ -1,7 +1,4 @@
 header
-  position: absolute
-  top: 0
-  left: 0
   width: 100%
   z-index: 10
   background: $header-color
@@ -51,8 +48,9 @@ nav
   a:hover
     color: $main-color
 
-.material-icons
-  font-size: 32px
+.favorites-menu,header
+  .material-icons
+    font-size: 32px
 .fa-bookmark
   font-size: 25px
 
@@ -74,7 +72,7 @@ nav
 
 .mobile-find-field
   position: absolute
-  top: 0
+  top: 62px
   left: -102%
   display: none
   background: #f2f2f2
@@ -126,4 +124,4 @@ nav
   left: 0
 
 .show-menu
-  top: 0
+  top: 62px
