--- a/dev-server/app/static-assets/sass/_page-pieces.sass
+++ b/dev-server/app/static-assets/sass/_page-pieces.sass
@@ -7,10 +7,12 @@ body
   min-width: 300px
 
 footer
-  position: absolute
   background: $header-color
   width: 100%
-  bottom: 0
-
-footer
   padding: 20px
+
+.copyright
+  display: block
+  text-align: center
+  color: #000
+  font-size: 20px
