--- a/dev-server/app/static-assets/sass/style.sass
+++ b/dev-server/app/static-assets/sass/style.sass
@@ -8,42 +8,36 @@
 @import day-night-toggle
 
 main
-  position: absolute
-  top: 60px
   width: 100%
-  height: calc(100% - 120px)
+  display: flex
+  flex-direction: column
+  flex-wrap: nowrap
+  align-items: center
 
 .simple-text
   font-size: 28px
 
 .substrate
-  width: 100%
+  width: 85%
   height: 100%
-  background: $substrate-bg-color
+  margin: 5px
+  border-radius: 10px
+  background: #f8f8f8
   z-index: 3
   display: flex
   flex-direction: column
+  justify-content: flex-start
+  align-items: center
   h2
     text-align: center
     margin: 20px
     font-family: $logo-font
     font-size: 2.2em
 
-.filtering-menu
-  display: flex
-  flex-direction: row
-  margin: 10px
-  padding: 5px 20px
-  justify-content: center
-  select
-    padding: 5px 10px
-    border-radius: 50px
-    background: #eee
-    margin: 0 20px
-
 table
+  margin: 10px 20px 10px 20px
   border-collapse: collapse
-  width: 100%
+  width: 90%
   td, th  
     border: 1px solid #ddd
     padding: 8px
@@ -60,8 +54,42 @@ table
     background-color: $main-color
     color: #fff
 
-.copyright
-  display: block
-  text-align: center
-  color: #000
-  font-size: 20px
+.filtering-menu
+  display: flex
+  flex-direction: row
+  justify-content: center
+  input[type="checkbox"],
+  input[type="radio"]
+    display: none
+  input[type="checkbox"]+label:hover
+    background: lighten($main-color,5%)
+  input[type="checkbox"]:checked+label
+    background: lighten($main-color,20%)
+  input[type="checkbox"]:checked+label:hover
+    background: lighten($main-color,15%)
+  .filtering-item 
+    @extend %filtering-item
+    cursor: pointer
+    background: $main-color
+    i
+      font-size: 20px
+
+%filtering-item
+  padding: 5px 10px
+  font-size: 1.3em
+  transition: all 0.2s
+  display: flex
+
+.filtering-label
+  border-radius: 40px 0 0 40px
+  background: $main-color
+  font-weight: 700
+  @extend %filtering-item
+.last-filtering-label
+  border-radius: 0 40px 40px 0
+
+@media (max-width: 585px)
+  .substrate
+    width: 100%
+    margin: 0
+    border-radius: 0
