--- a/dev-server/app/templates/pages/index.hbs
+++ b/dev-server/app/templates/pages/index.hbs
@@ -1,5 +1,6 @@
 {{> html/start title="T-Port" settings=settings }}
 {{> html/header }}
+	<main class="index-main">
 		<div class="google-map">
 			<!-- Google Maps -->
 			<div id="map"></div>
