--- a/dev-server/app/static-assets/css/styles.css
+++ b/dev-server/app/static-assets/css/styles.css
@@ -457,17 +457,19 @@ body {
   font-weight: 300;
   background: #fff;
   min-width: 300px;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
   background: #f2f2f2;
   width: 100%;
   padding: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .copyright {
-  display: block;
-  text-align: center;
   color: #000;
   font-size: 20px;
 }
@@ -634,6 +636,10 @@ main {
   align-items: center;
 }
 
+.index-main {
+  height: 100%;
+}
+
 .simple-text {
   font-size: 28px;
 }
@@ -647,7 +653,6 @@ main {
   z-index: 3;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
 }
 .substrate h2 {
@@ -658,12 +663,12 @@ main {
 }
 
 table {
-  margin: 10px 20px 10px 20px;
   border-collapse: collapse;
-  width: 90%;
+  display: flex;
+  margin: 10px;
 }
 table td, table th {
-  border: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
   padding: 8px;
 }
 table tr:nth-child(even) {
@@ -683,10 +688,18 @@ table th {
   color: #fff;
 }
 
+.filters {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .filtering-menu {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 10px;
 }
 .filtering-menu input[type=checkbox],
 .filtering-menu input[type=radio] {
