--- a/dev-server/app/static-assets/sass/_page-pieces.sass
+++ b/dev-server/app/static-assets/sass/_page-pieces.sass
@@ -5,14 +5,16 @@ body
   font-weight: 300
   background: #fff
   min-width: 300px
+  display: flex
+  flex-direction: column
 
 footer
   background: $header-color
   width: 100%
   padding: 20px
+  display: flex
+  justify-content: center
 
 .copyright
-  display: block
-  text-align: center
   color: #000
   font-size: 20px
