--- a/dev-server/app/templates/pages/nested/transport.hbs
+++ b/dev-server/app/templates/pages/nested/transport.hbs
@@ -1,17 +1,37 @@
 {{> html/start title="T-port - Transport" settings=settings }}
 {{> html/header }}
+	<main>
 		<div class="substrate">
 			<h2>Transport</h2>
-			<div class="filtering-menu">
-				<label class="filtering-label">Type:</label>
-				<input type="checkbox" name="bus" id="bus" class="filter-by-type"/>
-				<label for="bus" class="filtering-item"><i class="material-icons">directions_bus</i> Bus</label>
+			<div class="filters">
+				<div class="filtering-menu">
+					<label class="filtering-label">Type:</label>
+					<input type="checkbox" name="bus" id="bus" class="filter-by-type"/>
+					<label for="bus" class="filtering-item"><i class="material-icons">directions_bus</i> Bus</label>
 
-				<input type="checkbox" name="train" id="train" class="filter-by-type"/>
-				<label for="train" class="filtering-item"><i class="material-icons">train</i> Train</label>
+					<input type="checkbox" name="train" id="train" class="filter-by-type"/>
+					<label for="train" class="filtering-item"><i class="material-icons">train</i> Train</label>
 
-				<input type="checkbox" name="tram" id="tram" class="filter-by-type"/>
-				<label for="tram" class="last-filtering-label filtering-item"><i class="material-icons">tram</i> Tram</label>
+					<input type="checkbox" name="tram" id="tram" class="filter-by-type"/>
+					<label for="tram" class="last-filtering-label filtering-item"><i class="material-icons">tram</i> Tram</label>
+				</div>
+				<div class="filtering-menu">
+					<label class="filtering-label">Route:</label>
+					<input type="checkbox" name="route01" id="route01" class="filter-by-type"/>
+					<label for="route01" class="filtering-item">01</label>
+					<input type="checkbox" name="route02" id="route02" class="filter-by-type"/>
+					<label for="route02" class="filtering-item">02</label>
+					<input type="checkbox" name="route03" id="route03" class="filter-by-type"/>
+					<label for="route03" class="filtering-item">03</label>
+					<input type="checkbox" name="route04" id="route04" class="filter-by-type"/>
+					<label for="route04" class="filtering-item">04</label>
+					<input type="checkbox" name="route05" id="route05" class="filter-by-type"/>
+					<label for="route05" class="filtering-item">05</label>
+					<input type="checkbox" name="route06" id="route06" class="filter-by-type"/>
+					<label for="route06" class="filtering-item">06</label>
+					<input type="checkbox" name="route07" id="route07" class="filter-by-type"/>
+					<label for="route07" class="last-filtering-label filtering-item">07</label>
+				</div>
 			</div>
 			<table>
 				<tr>
